.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

#################################################
         ForgeGradle 2.3-SNAPSHOT-7764e3e        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
                 Powered by MCP                  
             http://modcoderpack.com             
     by: Searge, ProfMobius, R4wk, ZeuX          
     Fesh0r, IngisKahn, bspkrs, LexManos         
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJava/home/nickthehacker/Documents/MinecraftForge/F.I.R.S.T robotics forge mod/build/sources/main/java/com/nickb/frcmod/Enitity/RobotbuilderEntity.java:21: error: cannot find symbol
public class RobotbuilderEntity extends BlockTileEntity<TileEntitybuilder> {
                                                        ^
  symbol: class TileEntitybuilder
/home/nickthehacker/Documents/MinecraftForge/F.I.R.S.T robotics forge mod/build/sources/main/java/com/nickb/frcmod/Enitity/RobotbuilderEntity.java:24: error: cannot find symbol
	public Class<TileEntitybuilder> getTileEntityClass() {
	             ^
  symbol:   class TileEntitybuilder
  location: class RobotbuilderEntity
/home/nickthehacker/Documents/MinecraftForge/F.I.R.S.T robotics forge mod/build/sources/main/java/com/nickb/frcmod/Enitity/RobotbuilderEntity.java:30: error: cannot find symbol
	public TileEntitybuilder createTileEntity(World world, IBlockState state) {
	       ^
  symbol:   class TileEntitybuilder
  location: class RobotbuilderEntity
3 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 5.864 secs
